Completed reject() function and modified select() function